tests/snapshots/run_wpt_conformance__trtx_lesser_float16_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser.https.any.js",
    "lesser float16 broadcast 4D to 5D",
    "trtx",
    Failed {
        msg: Some(
            "lesser :: lesser float16 broadcast 4D to 5D: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [0, 1, 2, 8, 0, 255]; inputB: [255, 0, 1, 8]\n  expected output: [1, 1, 1, 0, 0, 0, 0, 1, 0, 0 ...] (len=12)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=12)\n  expected output full nd:\n[1, 1, 1, 0, 0, 0, 0, 1, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[2, 1, 1, 3];\n    inputB: f16[1, 2, 2, 1, 1];\n  }\n\n  nodes {\n    [output] = lesser(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
